<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:fontFamily="@font/be_font"
        android:text="@string/reg"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:text="@string/nim"
       android:textSize="15sp"
       android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edt_nim"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:paddingLeft="10sp"
        android:hint="@string/nim"
        android:background="@drawable/corner"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edt_Nama"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10sp"
        android:background="@drawable/corner"
        android:hint="@string/nama"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/prodi"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edt_prodi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:hint="@string/prodi"
        android:paddingLeft="10sp"
        android:background="@drawable/corner"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/email"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:paddingLeft="10sp"
        android:hint="@string/email"
        android:background="@drawable/corner"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/pw"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edt_pw2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:paddingLeft="10sp"
        android:background="@drawable/corner"
        android:inputType="textPassword"
        android:hint="@string/pw"/>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rc"
        android:fontFamily="@font/cc"
        android:text="@string/reg"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</LinearLayout>
