<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/be_font"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:text="@string/nim"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_nim"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15sp"
        android:paddingLeft="10dp"
        android:background="@drawable/corner"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/pw"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15sp"
        android:paddingLeft="10dp"
        android:background="@drawable/corner"
        android:inputType="textPassword"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btn_log"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_rc"
            android:fontFamily="@font/cc"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/btn_rc"
            android:fontFamily="@font/cc"
            android:text="@string/reg"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>